--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <noscript>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow">
     </noscript>
-    <title>Jack Marchant - Web Developer</title>
+    <title>Jack Marchant - Full-stack engineer</title>
   </head>
   <body>
     <div id="root"></div>
