Changed components to be stateless, more composable

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" manifest="%PUBLIC_URL%/website.appcache">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" media="none" onload="if(media!='all')media='all'">
-    <noscript>
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow">
-    </noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow">
     <title>Jack Marchant - Full-stack engineer</title>
+    <meta name="keywords" content="Jack Marchant - Full-stack engineer from Sydney, Australia.">
   </head>
   <body>
     <div id="root"></div>
