--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Jack Marchant - Full-stack engineer</title>
     <meta name="keywords" content="Jack Marchant - Full-stack engineer from Sydney, Australia.">
   </head>
   <body>
     <div id="root"></div>
-    <script src="%PUBLIC_URL%/js/analytics.js" async></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/js/register-sw.js" async></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/js/analytics.js" async></script>
   </body>
 </html>
