updated favicon and index to serve pre-rendered html'

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Jack Marchant - Full-stack engineer from Sydney, Australia.">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><div class="App"><div class="App-header"><h1 class="heading">Jack Marchant</h1><h3 class="subheading">Full-stack engineer</h3></div><div class="App-main"><div><p class="body-copy">I'm a full-stack web engineer interested in all things JavaScript. <br>I have experience in a number of other languages, frameworks and tools.</p><p class="body-copy">When I'm not coding, I enjoy reading and writing software engineering articles.</p><p class="body-copy">Pick your pipe:</p><ul class="c-list c-list--inline"><li><a class="c-link" target="_blank" title="Twitter" href="https://twitter.com/jackmarchant10">Twitter</a></li><li><a class="c-link" target="_blank" title="Medium" href="https://medium.com/@jackmarchant">Medium</a></li><li><a class="c-link" target="_blank" title="GitHub" href="https://github.com/jackmarchant">GitHub</a></li></ul><img src="/static/media/jack.729e61dc.jpg" class="c-photo" alt="Jack Marchant"></div></div></div></div>
     <script type="text/javascript" src="%PUBLIC_URL%/js/register-sw.js" async></script>
     <script type="text/javascript" src="%PUBLIC_URL%/js/analytics.js" async></script>
   </body>
